<resources>
    <string name="app_name">Rooster</string>

    <!-- Strings related to login -->
    <string name="prompt_jid">Jabber Id</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_jid">This Jid  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="rooster_logout">Logout</string>
    <string name="send_message">Send Message</string>
    <string name="rooster_add_contact">Add Contact</string>
    <string name="toast_crash">Rooster has crashed and we just sent the report</string>


    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>

    <string name="crash_dialog_title">Rooster has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="crash_user_email_label">Your Email</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="rooster_presence_subscribe">Subscribe</string>
    <string name="rooster_presence_unsubscribe">Unsubscribe</string>
    <string name="rooster_presence_subscribed">Subscribed</string>
    <string name="rooster_presence_unsubscribed">Unsubscribed</string>
    <string name="rooster_send_message">Send Message</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="contact_details">Contact Details</string>
    <string name="me_text">Me</string>
    <string name="title_activity_me">Me</string>
    <string name="action_settings">Settings</string>
</resources>
